<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Phone</string>

    <!-- Bottom nav -->
    <string name="nav_dialer">Dialer</string>
    <string name="nav_recents">Call log</string>

    <!-- Default dialer prompt -->
    <string name="prompt_default_title">Set as default phone app</string>
    <string name="prompt_default_desc">All incoming and outgoing calls will be handled by this app required for caller ID to work</string>
    <string name="prompt_default_action">Set as default</string>
    <string name="prompt_contacts_title">Read contacts</string>
    <string name="prompt_contacts_desc">Show display names for family and friends otherwise only business numbers can be identified</string>
    <string name="prompt_contacts_action">Grant</string>
    <string name="toast_open_settings_for_contacts">Permission permanently denied please grant from the app settings page</string>
    <string name="toast_contacts_loaded">Loaded %1$d contacts</string>
    <string name="toast_already_default">Already the default phone app</string>
    <string name="toast_default_unsupported">This system does not support setting a default dialer</string>

    <!-- Dialer -->
    <string name="dialer_hint">Enter a number</string>
    <string name="dialer_call">Call</string>
    <string name="toast_no_input">Please enter a number first</string>
    <string name="toast_need_call_permission">Call permission is required</string>
    <string name="toast_need_default_dialer">Set this app as the default phone app first</string>
    <string name="dialer_suggest_create">Create new contact</string>
    <string name="dialer_suggest_add">Add to a contact</string>
    <string name="dialer_suggest_message">Send a message</string>
    <string name="dialer_match_contacts_header">All contacts</string>
    <string name="dialer_match_others_header">Not in your contacts</string>
    <string name="toast_no_app_to_handle">No app available to handle this</string>

    <!-- Call log -->
    <string name="calllog_empty_title">No call history yet</string>
    <string name="calllog_empty_desc">Grant call log access to see your history here</string>
    <string name="calllog_empty_grant">Grant call log access</string>
    <string name="calllog_today">Today %1$s</string>
    <string name="calllog_yesterday">Yesterday %1$s</string>
    <string name="calllog_incoming">Incoming</string>
    <string name="calllog_outgoing">Outgoing</string>
    <string name="calllog_missed">Missed</string>
    <string name="calllog_rejected">Declined</string>
    <string name="calllog_unknown">Unknown</string>
    <string name="calllog_duration_min_sec">%1$dm %2$ds</string>
    <string name="calllog_duration_sec">%1$ds</string>
    <string name="calllog_header_today">Today</string>
    <string name="calllog_header_yesterday">Yesterday</string>
    <string name="calllog_header_earlier">Earlier</string>
    <string name="calllog_filter_all">All</string>
    <string name="calllog_filter_missed">Missed</string>
    <string name="calllog_filter_incoming">Incoming</string>
    <string name="calllog_filter_outgoing">Outgoing</string>
    <string name="calllog_expand_message">Message</string>
    <string name="calllog_expand_contact">Contact</string>

    <!-- In-call -->
    <string name="incall_state_ringing">Incoming call</string>
    <string name="incall_state_dialing">Dialing…</string>
    <string name="incall_state_connecting">Connecting…</string>
    <string name="incall_state_active">In call</string>
    <string name="incall_state_holding">On hold</string>
    <string name="incall_state_disconnecting">Hanging up…</string>
    <string name="incall_state_disconnected">Call ended</string>
    <string name="incall_answer">Answer</string>
    <string name="incall_reject">Decline</string>
    <string name="incall_hangup">Hang up</string>
    <string name="incall_mute">Mute</string>
    <string name="incall_unmute">Unmute</string>
    <string name="incall_speaker">Speaker</string>
    <string name="incall_querying">Identifying…</string>
    <string name="incall_unknown">Unknown number</string>
    <string name="incall_sim1">SIM1</string>
    <string name="incall_dock_dialpad">Keypad</string>
    <string name="incall_dock_mute">Mute</string>
    <string name="incall_dock_speaker">Speaker</string>
    <string name="incall_speaker_off">Earpiece</string>
    <string name="incall_dock_more">More</string>
    <string name="incall_more_title">More</string>
    <string name="incall_more_add">Add call</string>
    <string name="incall_more_hold">Hold</string>
    <string name="incall_more_unhold">Resume</string>
    <string name="fg_channel">Call notifications</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="pref_about">About</string>
    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_phone">Phone</string>
    <string name="pref_category_cache">Cache</string>
    <string name="pref_category_diagnostics">Diagnostics</string>
    <string name="pref_category_about">About</string>
    <string name="about_libraries">Open-source libraries</string>
    <string name="about_apis">External APIs</string>
    <string name="about_thanks">Thanks to all open-source contributors. Material Symbols by Google Iconics maintained by @mikepenz</string>
    <string name="about_api_baidu">m.baidu.com/s (offscreen WebView innerText scrape for caller ID)</string>
    <string name="pref_theme_mode">Theme</string>
    <string name="pref_theme_color">Accent color</string>
    <string name="pref_default_dialer">Default phone app</string>
    <string name="pref_default_dialer_summary_yes">This app is the default</string>
    <string name="pref_default_dialer_summary_no">Tap to set as default</string>
    <string name="pref_clear_empty">Clear empty cache</string>
    <string name="pref_clear_empty_summary">Remove cache entries for unidentified numbers</string>
    <string name="pref_clear_cache">Clear all cache</string>
    <string name="pref_crash_log">Last crash log</string>
    <string name="pref_crash_log_present">Tap to view / copy / clear</string>
    <string name="pref_crash_log_empty">No crash recorded</string>
    <string name="crash_dialog_title">Crash log</string>
    <string name="crash_dialog_copy">Copy</string>
    <string name="crash_dialog_clear">Clear</string>
    <string name="crash_dialog_close">Close</string>
    <string name="toast_crash_copied">Log copied to clipboard</string>
    <string name="toast_crash_cleared">Crash log cleared</string>
    <string name="toast_cache_cleared">All cache cleared</string>
    <string name="toast_empty_cleared">Empty cache cleared</string>

    <!-- Update -->
    <string name="pref_check_update">Check for updates</string>
    <string name="pref_check_update_summary">Current version %1$s</string>
    <string name="update_dialog_title">New version available</string>
    <string name="update_dialog_msg">Current %1$s, latest %2$s. Open the release page?</string>
    <string name="update_dialog_open">Open</string>
    <string name="update_dialog_later">Later</string>
    <string name="update_checking">Checking…</string>
    <string name="update_already_latest">Already on the latest version (%1$s)</string>
    <string name="update_check_failed">Update check failed</string>

    <string-array name="theme_mode_entries">
        <item>Follow system</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="theme_mode_values">
        <item>system</item>
        <item>light</item>
        <item>dark</item>
    </string-array>

    <string-array name="theme_color_entries">
        <item>Dynamic (Android 12+)</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Teal</item>
    </string-array>
    <string-array name="theme_color_values">
        <item>dynamic</item>
        <item>blue</item>
        <item>green</item>
        <item>purple</item>
        <item>red</item>
        <item>orange</item>
        <item>teal</item>
    </string-array>
</resources>
